[gd_scene load_steps=8 format=3 uid="uid://bhrlcdmrybkef"]

[ext_resource type="Script" uid="uid://b85ofl64njf4o" path="res://pause_menu.gd" id="1_05uyy"]
[ext_resource type="FontFile" uid="uid://gu1htgxoijdj" path="res://Fonts/FFFFORWA.TTF" id="1_hdmo1"]
[ext_resource type="Shader" uid="uid://da34p2l5uuiyu" path="res://pause_menu.gdshader" id="1_nwcfo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_05uyy"]
shader = ExtResource("1_nwcfo")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_p81d2"]
resource_name = "blur"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.330000063175]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2nc7s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d3xb4"]
_data = {
&"RESET": SubResource("Animation_2nc7s"),
&"blur": SubResource("Animation_p81d2")
}

[node name="Pause Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_05uyy")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_05uyy")
layout_mode = 1
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.39215687)

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 477.0
offset_top = 224.0
offset_right = 677.0
offset_bottom = 424.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="ResumeButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
theme_override_fonts/font = ExtResource("1_hdmo1")
theme_override_font_sizes/font_size = 16
text = "Resume"

[node name="RestartButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hdmo1")
theme_override_font_sizes/font_size = 16
text = "Restart"

[node name="PauseMusicButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_hdmo1")
theme_override_font_sizes/font_size = 16
text = "Pause Music"

[node name="QuitButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ResumeButton")
theme_override_fonts/font = ExtResource("1_hdmo1")
theme_override_font_sizes/font_size = 16
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_d3xb4")
}

[connection signal="pressed" from="PanelContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PauseMusicButton" to="." method="_on_pause_music_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
